Página de resultados

--- a/src/app/modules/public/store/pages/layout-page/layout-page.component.html
+++ b/src/app/modules/public/store/pages/layout-page/layout-page.component.html
@@ -19,7 +19,8 @@
   <div
     class="flex-grow-1 justify-content-center hidden lg:flex absolute lg:static w-full left-0 top-100 z-1 shadow-2 lg:shadow-none surface-overlay"
   >
-    <app-search-box></app-search-box>
+  
+    <app-search-box [inPublic]="true"></app-search-box>
   </div>
   <div
     class="p-element flex-grow-1 justify-content-end hidden lg:flex absolute lg:static w-full left-0 top-100 z-1 shadow-2 lg:shadow-none surface-overlay"
