--- a/src/app/modules/public/store/pages/home-page/home-page.component.html
+++ b/src/app/modules/public/store/pages/home-page/home-page.component.html
@@ -25,7 +25,7 @@
             <button pButton pRipple label="Live Demo" type="button" class="p-button-outlined"></button>
         </section>
     </div>
-    <div style="width: 350px; height: 350px;" class="col-12 md:col-6 overflow-hidden">
+    <div style="max-width: 350px; max-height: 350px;" class="col-12 md:col-6 overflow-hidden">
         <img src="https://www.pngplay.com/wp-content/uploads/7/Headphones-Transparent-PNG.png" alt="Image" class="md:ml-auto block md:h-full">
     </div>
 </div>
